<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <artifactId>server</artifactId>

  <dependencies>
    <dependency>
      <artifactId>ashley</artifactId>
      <groupId>com.badlogicgames.ashley</groupId>
      <version>1.7.4</version>
    </dependency>
    <dependency>
      <artifactId>gdx</artifactId>
      <groupId>com.badlogicgames.gdx</groupId>
      <version>1.11.0</version>
    </dependency>
    <dependency>
      <artifactId>gdx-ai</artifactId>
      <groupId>com.badlogicgames.gdx</groupId>
      <version>1.8.2</version>
    </dependency>
    <dependency>
      <artifactId>gson</artifactId>
      <groupId>com.google.code.gson</groupId>
      <version>2.10.1</version>
    </dependency>
    <dependency>
      <artifactId>logback-classic</artifactId>
      <groupId>ch.qos.logback</groupId>
      <version>1.4.6</version>
    </dependency>
    <dependency>
      <!--Chưa thể cập nhật fbs cho client nên vẫn dùng bản 1.12.0-->
      <artifactId>flatbuffers-java</artifactId>
      <groupId>com.google.flatbuffers</groupId>
      <version>1.12.0</version>
    </dependency>
    <dependency>
      <artifactId>guava</artifactId>
      <groupId>com.google.guava</groupId>
      <version>31.1-jre</version>
    </dependency>
    <dependency>
      <artifactId>netty-all</artifactId>
      <groupId>io.netty</groupId>
      <scope>compile</scope>
      <version>4.1.90.Final</version>
    </dependency>
    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>3.12.0</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>5.9.2</version>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>1.18.26</version>
    </dependency>
  </dependencies>

  <groupId>survival2d</groupId>
  <modelVersion>4.0.0</modelVersion>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <version>1.0-SNAPSHOT</version>
</project>
